--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "prettier": "^3.3.3",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-require-extensions": "^0.1.3",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-sort-exports": "^0.9.1",
-    "eslint-plugin-unicorn": "^54.0.0"
+    "eslint-plugin-unicorn": "^55.0.0",
+    "vite": "^5.3.5"
   }
 }
