--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prebuild": "npm run lint -s && { echo \"\n\"; npm run format -s; }",
+    "lint": "eslint --fix \"**/*.{js,ts}\" && echo \"\\033[32mNo Lint Errors\\033[0m\"",
+    "format": "echo \"Files formatted:\"; prettier -w **/* -l && echo \"\n\\033[32mFormatting Complete\\033[0m\""
   },
   "keywords": [],
   "author": "",
@@ -16,7 +21,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "prettier": "^3.3.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -27,6 +31,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-sort-exports": "^0.9.1",
     "eslint-plugin-unicorn": "^55.0.0",
+    "prettier": "^3.3.3",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard": "^36.0.1",
     "vite": "^5.3.5"
   }
 }
