--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "prebuild": "npm run lint -s && { echo \"\n\"; npm run format -s; }",
-    "lint": "eslint --fix \"**/*.{js,ts}\" && echo \"\\033[32mNo Lint Errors\\033[0m\"",
+    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\" && echo \"\\033[32mNo Lint Errors\\033[0m\"",
     "format": "echo \"Files formatted:\"; prettier -w **/* -l && echo \"\n\\033[32mFormatting Complete\\033[0m\""
   },
   "keywords": [],
